# queueUI

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  env.yml  pyproject.toml
qsui/: __init__.py  aboutdialog.py  app.py  licensedialog.py  mainwindow.py  popup.py  user_settings.py  utils.py
queueUI/: __init__.py  licensedialog.py  mainwindow.py  qsui_gui.py  statusbar.py
queueUI/resources/: historyeditor.ui  mainwindow.ui  planeditor.ui  queueeditor.ui  statusbar.ui
recources/: mainwindow.ui
src/qsui/: __init__.py  test1.py  test2.py
src/qsui/ressources/: mainwindow.ui
tests/: __init__.py  mainwindow.py  qserverconnect.ipynb
